Change an image for an issue. Fix issue spacing.

--- a/themes/palestine/static/css/issues.css
+++ b/themes/palestine/static/css/issues.css
@@ -9,4 +9,5 @@
 
 .issue-title {
   max-height: 2.4rem;
+	padding-bottom: 3.2rem;
 }
